# AvalorAI

./: Cargo.toml  README.md
src/: main.rs  world.rs
src/algorithms/: hill_climber.rs  hill_climber_guided.rs  mod.rs  random_improver.rs  random_walker.rs
src/data_structures/: colors.rs  mod.rs  problem.rs  solution.rs
src/visualisation/: window.rs
