[package]
name = "avlr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
color-eyre = "0.6.3"
derive_more = { version = "2.0.1", features = ["full"] }
minifb = "0.28.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
noise = "0.9.0"
perlin_noise = "1.0.1"
rand = "0.9.0"
statrs = "0.18.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
